# mio-named-pipes

./: Cargo.toml
src/: from_raw_arc.rs  lib.rs
src/inner/: ext.rs  mod.rs  net.rs  socket.rs
tests/: smoke.rs
