[package]
name = "mio-uds-windows"
version = "0.1.0"
authors = ["Damon Barry"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/damonbarry/mio-uds-windows"
homepage = "https://github.com/damonbarry/mio-uds-windows"
documentation = "https://github.com/damonbarry/mio-uds-windows"
description = """
Unix Domain Sockets for mio...on Windows!
"""

[target.'cfg(windows)'.dependencies]
log = "0.4"
mio = "0.6.5"
miow = "0.3"
winapi = { version = "0.3", features = ["winerror", "ioapiset", "minwinbase", "winbase"] }

[dev-dependencies]
env_logger = { version = "0.4", default-features = false }
rand = "0.4"
tempdir = "0.3"
